[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "timberAllocation"
readme = "ReadMe.md"
description = "Just a tool trying to solve the task of optimal cutting existing pieces of timber into pieces that when combined give pieces of needed length"
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["algorythms", "greedy", "divide-and-conquer", "dynamic programming", "optimization"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"RichConsole",  # @ git+https://gitlab.com/KOLANICH/RichConsole.py.git
]
[project.optional-dependencies]
optimization = ["autograd"]

[project.urls]
Homepage = "https://github.com/KOLANICH-research/timberAllocation.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["timberAllocation", "timberAllocation.*"]

[tool.setuptools_scm]
